top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mehrab Hassan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Mehrab's</span> Empire</h1>
+            <h3>A student of CSE</h3>
+            <p>Read in diu.Former student of BIAM.Home district BOGURA.Current address sukrabad,Indira road.love to
+                eat.love
+                play both online game and physical game.recently started full stack web development course by JHANKAR
+                MAHBUB.Now im fully dedicated in development.Thia is my mission of career development.
+            </p>
+            <a class="linl-button" target="_blank" href="https://web.facebook.com/profile.php?id=100011924087132">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/mehrab.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
