--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
             <img src="images/mehrab.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/mehrab.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>My aim is to be a developer.Now im in practice.But everyone knowa that practice a man perfect.So do i
+                belive that.Im focoused on my BIG DREAM.In Sha Allah i'll accomplish my dream soon</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
