--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Mehrab's</span> Empire</h1>
@@ -23,14 +23,14 @@
                 play both online game and physical game.recently started full stack web development course by JHANKAR
                 MAHBUB.Now im fully dedicated in development.Thia is my mission of career development.
             </p>
-            <a class="linl-button" target="_blank" href="https://web.facebook.com/profile.php?id=100011924087132">HIRE
+            <a class="link-button" target="_blank" href="https://web.facebook.com/profile.php?id=100011924087132">HIRE
                 ME</a>
         </div>
         <div class="half-width">
             <img src="images/mehrab.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/mehrab.png" alt="">
         </div>
@@ -42,6 +42,31 @@
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-Present,Pro Level Developer</h3>
+                <p>Im the master of HTML,CSS & JS and so on.I've learned all this from an online course "complete Web
+                    Development With Jhankar Mahbub".by that course I've learned all this things.now Im a successful
+                    developer.Now I'm ready for job.
+                </p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2024,Pro Level Developer</h3>
+                <p>Im the master of HTML,CSS & JS and so on.I've learned all this from an online course "complete Web
+                    Development With Jhankar Mahbub".by that course I've learned all this things.now Im a successful
+                    developer.Now I'm ready for job.</p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>
+        © By MEHRAB HASSAN , 04/07/2022 ,Portfolio.
+    </p>
+</footer>
 
 </html>
